--- a/frontend/src/Components/navbar.module.css
+++ b/frontend/src/Components/navbar.module.css
@@ -97,20 +97,29 @@
     border-radius: 50%;
     display: grid;
     justify-content: center;
-    /* padding: 1.2rem; */
+    
+    padding-right: 5px;
+    padding-top: 3px;
     align-items: center;
     background-image: linear-gradient(94deg, #91d253, #3ba184);
+}
+.username{
+    display: flex;
+    justify-content: center;
+    padding-top: 12px;
 }
 
 .user p {
     color: #fff;
     font-size: 14px;
+    
 }
 
 .userContainer {
     display: flex;
     justify-content: center;
     align-items: center;
+
     position: relative;
 }
 
@@ -123,6 +132,7 @@
     /* width: 125%; */
     background-color: #fff;
     position: absolute;
+   
     top: 60px;
     right: 0;
     /* left: 0px; */
