--- a/frontend/src/features/flightBookingComponents/flightbooking.module.css
+++ b/frontend/src/features/flightBookingComponents/flightbooking.module.css
@@ -138,10 +138,10 @@
   background-color: orange;
 }
 
-.genderbutton:focus{
+/* .genderbutton:focus{
   background-color: skyblue !important;
   color: #fff !important;
-}
+} */
 
 
 .genderbutton:active::before{
@@ -151,9 +151,9 @@
   /* box-shadow: 0 5px #F68B8B; */
 transform: translateY(4px);
 }
-.genderbutton:focus {
+/* .genderbutton:focus {
   outline: blue auto 5px; 
-}
+} */
 
 
 /* .genderbutton :after, :before {
