--- a/frontend/src/features/flightComponents/FirstSection.css
+++ b/frontend/src/features/flightComponents/FirstSection.css
@@ -1,21 +1,4 @@
-.FirstSection{
-    /* background-color: rgb(69, 69, 143); */
-    height: auto !important;
-    padding: 2rem;
-    /* background-color: rgb(32, 5, 73); */
-    position: relative !important;
-    margin-bottom: 4rem !important;
-    /* background-color: rgb(2, 2, 82); */
-    background-image: linear-gradient(0deg,#15457b,#051423);
-    /* width: 100%; */
 
-    --color-primary: #008cff !important;
-    --color-btn-primary-bg: linear-gradient(93deg,#53b2fe,#065af3) !important;
-    --color-btn-primary-text: #fff;
-    --color-btn: #008cff;
-    --btn-border-radius: 4px;
-    
-}
 .logo{
     color: burlywood !important;
     margin-left: 5rem;
@@ -28,17 +11,7 @@ cursor: pointer;
     cursor: pointer !important;
 }
 
-.roww{
-background-color: #fff;
-margin-bottom: 1rem !important;
-bottom: 1.9rem!important;
-position: relative;
-display: flex !important;
-/* flex-direction: row !important; */
-/* border-radius: 20px !important; */
 
-
-}
 .container{
 /* margin-top:2rem !important; */
 background:white;
@@ -79,24 +52,7 @@ margin-bottom: 1rem !important;
   }
 
 
-.roww1{
-    background-color: #fff;
-    position: relative;
-    border-radius: 10px;
-    /* height: 4.7rem; */
-    width: 80%;
-    margin-left: auto !important;
-    margin-right: auto !important;
-    /* margin-bottom: 2rem !important; */
-    display: flex !important;
-    flex-direction: row;
-    /* top: 2rem !important; */
-    bottom: 2.5rem;
-     -moz-box-shadow: 0 0 3px #ccc;
--webkit-box-shadow: 0 0 3px #ccc;
-box-shadow: 0 0 3px rgb(53, 49, 49);
 
-}
 .bidf{
     /* margin-left: auto !important; */
     left: auto !important;
@@ -115,14 +71,15 @@ box-shadow: 0 0 3px rgb(53, 49, 49);
     width: auto !important;
     /* position: relative; */
     
-    top: 5px;
+    /* top: 5px; */
+   
     
     padding: 10px !important;
     /* min-width: 12% !important; */
     height: 10px;
     border-color: none !important;
     margin-left: 10px;
-    margin-bottom: 1rem;
+    /* margin-bottom: 3rem; */
     color: black !important;
     border-radius: 8rem !important;
     background-color: rgb(243, 241, 241) !important;
