--- a/frontend/src/features/flightComponents/FirstSection.css
+++ b/frontend/src/features/flightComponents/FirstSection.css
@@ -92,17 +92,18 @@ margin-bottom: 1rem !important;
         /* height: 55px !important; */
         display: flex;
         min-width: auto !important;
-        min-height: 100% !important;
-        max-height:150% !important ;
+        min-height: 50% !important;
+        max-height:50% !important ;
         border-radius: 5px !important;
         padding: 15px !important;
+        padding-top: 10px !important;
         justify-content: space-between !important;
         /* margin-bottom: 10px; */
         /* padding: 2rem; */
     }
     .onewaytitle{
         font-size: 12px !important;
-        font-weight: 500 !important;
+        font-weight: 700 !important;
         /* font-size:14px; */
         position: relative;
         bottom: 8px !important;
@@ -120,13 +121,16 @@ margin-bottom: 1rem !important;
         /* display: none; */
     }
 }
-@media only screen and (max-width: 435px) {
+@media only screen and (max-width: 510px) {
     .radiobutton,.radiobutton1,.radiobutton2
     {
-        margin-top: 10px;
-        min-height:5.5rem !important;
-        display: flex;
+        margin-top: -5px !important; 
+        min-height:3.5rem !important;
+        padding-top: 10px !important;
+        max-height:4rem !important;
+        /* display: grid !important; */
         flex-direction: column;
+        /* justify-content: center !important; */
     }}
 @media only screen and (max-width: 900px) {
     .radiobutton,.radiobutton1,.radiobutton2
