--- a/frontend/src/features/flightComponents/singleflight.module.css
+++ b/frontend/src/features/flightComponents/singleflight.module.css
@@ -55,6 +55,7 @@ body {
   background-color: #f4f4f4;
   display: flex;
   justify-content: space-around;
+  padding-right: 18%;
   cursor: pointer;
 }
 .singleflight {
@@ -103,7 +104,8 @@ body {
 .guidelineImg {
   max-width: 45px;
   max-height: 45px;
-  margin-top: 30px;
+  top: 10px;
+  position: relative;
 }
 .guidelineText {
   padding: 3px;
@@ -336,6 +338,9 @@ body {
    
 
   }
+.sortInnerDiv {
+  padding-right: 0;
+}
   /* .divsec > .inner_cont{
     justify-content: end;
     margin-left: auto;
