--- a/frontend/src/Components/Stickyfooter.css
+++ b/frontend/src/Components/Stickyfooter.css
@@ -23,7 +23,7 @@ color: white;
         position: fixed;
         
         bottom: 0;
-        z-index: 12111;
+        z-index: 121111111111;
         display: flex;
         
        
