search page from to oneway fixed

--- a/frontend/src/features/flightComponents/Search.css
+++ b/frontend/src/features/flightComponents/Search.css
@@ -11,7 +11,12 @@
     padding-left: 10px;
     
 }
-
+.selectsearch{
+  z-index: 99950;
+  /* overflow: hidden; */
+  bottom: 2.9rem;
+  margin-bottom: 0;
+}
 .dropdown-toggle{
   color: #fff !important;
 }
