--- a/frontend/src/features/flightComponents/singleflight.module.css
+++ b/frontend/src/features/flightComponents/singleflight.module.css
@@ -62,12 +62,12 @@ body {
   margin-top: 2%;
   height: fit-content;
   padding: 1%;
-  border-radius: 5px;
+  /* border-radius: 4px; */
   /* width: 100%; */
   background-color: white;
   -moz-box-shadow: 0 0 3px #ccc;
   -webkit-box-shadow: 0 0 3px #ccc;
-  box-shadow: 0 0 6px rgb(158, 156, 156);
+  box-shadow: 0 0 5px rgb(158, 156, 156);
 
 }
 .heading {
@@ -197,6 +197,27 @@ body {
   display: flex;
   flex-direction: row !important;
   width:90%;
+}
+.flightdetails{
+  border-bottom: 0.5px solid #dcdcdc;
+    background-color: #fafbfc;
+    padding: 17px 20px;
+    /* position: relative; */
+    /* bottom: 10px; */
+    box-shadow: inset 0 2px 9px 0 rgb(0 0 0 / 8%);
+
+}
+.flightdetailsbtn{
+  -moz-box-shadow: 0 0 2px #ccc;
+  -webkit-box-shadow: 0 0 2px #ccc;
+  box-shadow: 0 0 2px rgb(158, 156, 156);
+  width: 65%;
+  margin-left: 10px !important;
+  margin-bottom: 24px !important;
+  
+  /* display: inline-flex !important; */
+
+
 }
 
 /* Extra small devices (phones, 600px and down) */
