--- a/frontend/src/Components/flight.module.css
+++ b/frontend/src/Components/flight.module.css
@@ -104,6 +104,7 @@ display: none;
   -webkit-box-shadow: 0 0 2px #ccc;
   box-shadow: 0 0 2px rgb(158, 156, 156);
   padding: 5px !important;
+  /* min-height: 3rem */
 }
 .multiple_trip > div {
   display: flex;
@@ -537,7 +538,7 @@ display: none;
     height: 200px;
     z-index: 20;
     top: 30px ;
-    left: -100%;
+    left: -100% ;
     background: white;
     /* border: 1px solid red; */
     padding: 15px;
